--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.8",
     "redux": "^4.2.0"
   },
   "devDependencies": {
