--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^18.2.0",
     "react-daisyui": "^2.2.0",
     "react-dom": "^18.2.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.8",
+    "recharts": "^2.1.14",
     "redux": "^4.2.0"
   },
   "devDependencies": {
