--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "@rematch/core": "^2.2.0",
     "axios": "^0.27.2",
+    "csv": "^6.2.0",
+    "csv-append": "^1.0.0",
+    "csv-stringify": "^6.2.0",
+    "csv-write-stream": "^2.0.0",
+    "csv-writer": "^1.6.0",
     "daisyui": "^2.22.0",
+    "json2csv": "^5.0.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-daisyui": "^2.2.0",
