Allowed for editing the csv with backend

--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
+    "@tensorflow/tfjs-node": "^3.20.0",
     "axios": "^0.27.2",
     "csv": "^6.2.0",
+    "csv-write-stream": "^2.0.0",
     "daisyui": "^2.22.0",
+    "danfojs-node": "^1.1.1",
     "dotenv": "^16.0.2",
+    "express": "^4.18.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-daisyui": "^2.2.0",
