--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rematch/core": "^2.2.0",
     "@tensorflow/tfjs-node": "^3.20.0",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "csv": "^6.2.0",
     "csv-write-stream": "^2.0.0",
     "daisyui": "^2.22.0",
