--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite & node backend/server.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@rematch/core": "^2.2.0",
+    "@tensorflow/tfjs-node": "^3.20.0",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "csv": "^6.2.0",
+    "csv-write-stream": "^2.0.0",
     "daisyui": "^2.22.0",
+    "danfojs-node": "^1.1.1",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-daisyui": "^2.2.0",
@@ -21,7 +29,9 @@
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.8",
     "recharts": "^2.1.14",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "sql.js": "^1.8.0",
+    "sqlite3": "^5.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
